tests/valid/teste_loops.ts
let x: number = 0;

while(1 < 2){
    console.log("1");
    x = 1 + 1;
}

for(let i: number = 0, j: number = 0; 2 < 5; x = 1 + 1, y = 2 + 2){
    console.log("1"), console.log("2");
}